--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         artistas, programadores y diseñadores para lograr juegos que inspiren, enseñen y diviertan.
       </p>
       <div class="imagen-box">
-        <img src="images/Img.png" 
+        <img src="https://github.com/KevinSosa1991/mi-trabajo-de-suenos/blob/3545128a3d0533c74024b046f052d67acaa24d4b/Images/Img.png" 
              alt="Desarrollo y diseño de videojuegos en computadora" class="imagen-hero">
       </div>
     </div>
@@ -97,4 +97,5 @@
   </div>
 </body>
 </html>
+
 
