--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         artistas, programadores y diseñadores para lograr juegos que inspiren, enseñen y diviertan.
       </p>
       <div class="imagen-box">
-        <img src="https://github.com/KevinSosa1991/mi-trabajo-de-suenos/blob/3545128a3d0533c74024b046f052d67acaa24d4b/Images/Img.png" 
+        <img src="https://images.unsplash.com/photo-1511512578047-dfb367046420?q=80&w=1200&auto=format&fit=crop"  
              alt="Desarrollo y diseño de videojuegos en computadora" class="imagen-hero">
       </div>
     </div>
@@ -97,5 +97,6 @@
   </div>
 </body>
 </html>
+
 
 
